--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,10 @@ URL: https://github.com/SridharJagannathan/natverse, https://jefferis.github.io/
 BugReports: https://github.com/SridharJagannathan/natverse/issues
 RoxygenNote: 6.1.1
 Depends: 
-    nat,
-    elmr
+    R (>= 3.1)
 Imports:
+    nat,
+    elmr,
     fafbseg,
     drvid,
     neuprintr
