--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,natverse_conflicts)
 export(natverse_conflicts)
+export(natverse_update)
 import(elmr)
 import(nat)
 importFrom(magrittr,"%>%")
