--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(person("Gregory","Jefferis", email="jefferis@gmail.com",
     role = c("aut", "cre"), comment = c(ORCID = "0000-0002-2078-1145")))
 Description: Provides functionality for installing and updating all nat packages and friends in one go. This includes
     both CRAN and github only packages. Other functionalities like checking conflicts are also provided. Inspired from
-    tidyverse and dtpupdate packages.
+    tidyverse and dtupdate packages.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -30,10 +30,16 @@ Imports:
     magrittr (>= 1.5),
     stringr (>= 1.3.0),
     tibble (>= 1.4.2),
-    dplyr,
+    dplyr
+Suggests:
+    spelling,
     knitr,
     DependenciesGraphs,
-    visNetwork(>= 0.2.1)
+    visNetwork(>= 0.2.1),
+    hexSticker,
+    ggplot2,
+    here,
+    png
 Remotes: jefferis/nat,
     jefferis/elmr,
     jefferis/fafbseg,
