Add remote for DependenciesGraphs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,3 +47,4 @@ Remotes: jefferis/nat,
     jefferis/fafbseg,
     jefferis/drvid,
     jefferislab/neuprintr
+    datastorm-open/DependenciesGraphs
