Fix fishatlas, insectbrainr DESCRIPTION entries
* need Remotes and Suggests entries
* @alexanderbates this fixes a bug introduced by 06d3fcc99539b75c7f70e8ece55ccce4d94bf852

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,11 +40,13 @@ Suggests:
     ggplot2,
     here,
     png,
-    natverse/insectbrainr,
-    natverse/fishatlas
+    insectbrainr,
+    fishatlas
 Remotes: jefferis/nat,
     jefferis/elmr,
     jefferis/fafbseg,
     jefferis/drvid,
-    jefferislab/neuprintr
+    jefferislab/neuprintr,
+    natverse/insectbrainr,
+    natverse/fishatlas,
     datastorm-open/DependenciesGraphs
