--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,12 +12,19 @@ Authors@R:
              family = "Jagannathan",
              role = c("aut", "cre"),
              email = "j.sridharrajan@gmail.com",
-             comment = c(ORCID = "0000-0002-2078-1145")))
+             comment = c(ORCID = "0000-0002-2078-1145")),
+      person(given = "Alex",
+             family = "Bates",
+             role = c("aut", "cre"),
+             email = "abates@mrc-lmb.cam.ac.uk",
+             comment = c(ORCID = "0000-0002-1195-0445")))
 Description: Provides functionality for installing and updating
     all nat packages and friends in one go. This includes both CRAN and
     github only packages. Other functionalities like checking conflicts
     are also provided. Inspired from tidyverse and dtupdate packages.
 License: GPL-3
+URL: https://github.com/natverse/natverse
+BugReports: https://github.com/natverse/natverse/issues
 Depends: 
     elmr,
     nat,
@@ -58,5 +65,3 @@ Remotes:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-URL: https://github.com/natverse/natverse
-BugReports: https://github.com/natverse/natverse/issues
