--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Imports:
     pbapply,
     purrr (>= 0.2.4),
     stringr (>= 1.3.0),
-    tibble (>= 1.4.2)
+    tibble (>= 1.4.2),
+    remotes
 Suggests:
     DependenciesGraphs,
     fishatlas,
@@ -52,7 +53,8 @@ Suggests:
     png,
     spelling,
     testthat (>= 2.1.0),
-    visNetwork (>= 0.2.1)
+    visNetwork (>= 0.2.1),
+    sessioninfo
 Remotes: 
     datastorm-open/DependenciesGraphs,
     jefferis/drvid,
