--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Imports:
     neuprintr,
     pbapply,
     purrr (>= 0.2.4),
+    sessioninfo,
     stringr (>= 1.3.0),
     tibble (>= 1.4.2),
     remotes
@@ -53,8 +54,7 @@ Suggests:
     png,
     spelling,
     testthat (>= 2.1.0),
-    visNetwork (>= 0.2.1),
-    sessioninfo
+    visNetwork (>= 0.2.1)
 Remotes: 
     datastorm-open/DependenciesGraphs,
     jefferis/drvid,
