--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,natverse_conflicts)
 export(dependency_plot)
 export(dependency_visualization)
 export(natverse_conflicts)
+export(natverse_deps)
 export(natverse_update)
 import(elmr)
 import(nat)
