Suggest alphashape3d, Morpho, Rvcg
* these are listed as natverse packages
* we probably want them installed by default, but we might like not to insist on them (I had install difficulties in the past).

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,7 +53,10 @@ Suggests:
     png,
     spelling,
     testthat (>= 2.1.0),
-    visNetwork (>= 0.2.1)
+    visNetwork (>= 0.2.1),
+    alphashape3d,
+    Morpho,
+    Rvcg
 Remotes: 
     datastorm-open/DependenciesGraphs,
     natverse/drvid,
