--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
 Language: en-GB
-URL: https://github.com/natverse/natverse, https://jefferis.github.io/nat/
+URL: https://github.com/natverse/natverse, https://natverse.github.io/nat/
 BugReports: https://github.com/natverse/natverse/issues
 Depends: 
     elmr,
