--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,5 +77,5 @@ Remotes:
     natverse/flycircuit,
     natverse/insectbrainr,
     natverse/mouselightr,
-    natverse/neuromorphr
+    natverse/neuromorphr,
     natverse/nat.jrcbrains
