Replaced function package2remote.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -70,7 +70,7 @@ Remotes:
     datastorm-open/DependenciesGraphs,
     natverse/drvid,
     natverse/elmr,
-    jefferis/fafbseg,
+    natverse/fafbseg,
     natverse/nat,
     natverse/neuprintr,
     natverse/fishatlas,
