--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
-pandoc: 2.7.3
-pkgdown: 1.5.1
+pandoc: 2.11.1
+pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: []
-last_built: 2020-07-30T07:27Z
+articles: {}
+last_built: 2020-12-18T02:52Z
 
